feat(ic): 实现IC加权自动回退机制并添加中性化功能
- 实现getLatestCommonIcDate方法获取多个因子共有IC数据的最新日期
- 在IC加权时自动回退到最近可用IC日期，解决近5个交易日IC数据缺失问题
- 前端展示IC数据截止日期提醒用户数据可用范围
- 添加行业中性化、市值中性化及双重中性化选项
- 实现因子类型智能推荐中性化方式功能
- 策略初始化基于实际可用因子动态构建配置避免硬编码不存在因子
- 改进策略因子配置格式兼容性和加载逻辑